Fixed alignment issue with images

--- a/index.css
+++ b/index.css
@@ -330,6 +330,8 @@ textarea {
 .devlog-button > img {
     display: inline-block;
     width: 20%;
+
+    margin-bottom: 0px;
 }
 
 
